[package]
name = "ros"
version = "0.1.0"
authors = ["Tyler Oalman <tyleroalman@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.8.5"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.8.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
